[gd_scene load_steps=8 format=2]

[ext_resource path="res://Styles/Buttons/norm.tres" type="StyleBox" id=1]
[ext_resource path="res://Styles/Buttons/pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Styles/Buttons/hover.tres" type="StyleBox" id=3]
[ext_resource path="res://Styles/Labels/halt_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/misc/hold_true.png" type="Texture" id=5]
[ext_resource path="res://Styles/Labels/whatevertheseneedseveremanagement.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/held/held_slot.gd" type="Script" id=7]

[node name="held_slot" type="MarginContainer"]
margin_right = 150.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 28 )
mouse_filter = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 150.0
margin_bottom = 28.0
alignment = 1

[node name="halt" type="Button" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 35.0
margin_bottom = 28.0
rect_min_size = Vector2( 31, 28 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="content" type="Label" parent="HBoxContainer/halt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.90735e-06
margin_bottom = -1.90735e-06
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
text = "=/="
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="held" type="Button" parent="HBoxContainer"]
margin_left = 39.0
margin_right = 70.0
margin_bottom = 28.0
rect_min_size = Vector2( 31, 28 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 1 )

[node name="content" type="Sprite" parent="HBoxContainer/held"]
texture = ExtResource( 5 )
centered = false

[node name="lored_name" type="Label" parent="HBoxContainer"]
margin_left = 74.0
margin_top = 9.0
margin_right = 146.0
margin_bottom = 18.0
mouse_filter = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Carcinogens"
[connection signal="button_down" from="HBoxContainer/halt" to="." method="_on_button_down"]
[connection signal="pressed" from="HBoxContainer/halt" to="." method="_on_halt_pressed"]
[connection signal="button_down" from="HBoxContainer/held" to="." method="_on_button_down"]
[connection signal="pressed" from="HBoxContainer/held" to="." method="_on_held_pressed"]
